# solana-whitelisting-program

./: .gitignore
front-end/: tsconfig.json
program/: Cargo.toml
program/token-swap/: Cargo.toml
program/whitelist/: Cargo.toml
program/whitelist/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/: package.json  tsconfig.json
scripts/src/: constants.ts  index.ts  types.ts
scripts/src/features/: fundMainAddresses.ts  initializaPda.ts  initializePda.ts  storeMainAddresses.ts  unwrapSol.ts  wrapSol.ts
scripts/src/features/addressParse/: tokenPool.ts  whiteListGlobal.ts  whiteListUser.ts
scripts/src/features/main/: fundMainAddresses.ts  storeMainAddresses.ts
scripts/src/features/token/: createMint.ts  createTokenAndStopMint.ts
scripts/src/features/whitelist/: createPool.ts  initializePda.ts  swapSol.ts  unwrapSol.ts  wrapSol.ts
scripts/src/utils/: file.ts  layout.ts  mint.ts  swap.ts  token.ts
