[package]
name = "whitelist-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.1"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
borsh = "0.9.1"
borsh-derive = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
